--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
   <span></span>
   <span></span>
   <span></span>
-</div>
+  </div>
   <nav class="menu">
   <ul id="accordion_menu">
     <li>機能一覧</li>
@@ -107,4 +107,23 @@
     </li>
   </ul>
   </nav>
+</div>
+<div class="row">
+  <div class="col-4"></div>
+  <div class="col-4">
+<h2 class="d-flex justify-content-center">
+  下北沢ラウンジ
+</h2>
+</div>
+<div class="col-4 d-flex justify-content-end">
+  <div class="m-3">
+    広告
+  </div>
+  <div class="m-3">
+    店舗ページ確認
+  </div>
+  <div class="m-3">
+    ログアウト
+  </div>
+  </div>
 </div>
