--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,184 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-md-3">
+      <div class="card">
+        <div class="card-body">
+          <div class="row d-flex justify-content-center">
+            <p class="w-100 bg-success text-light p-2 mr-3 ml-3">管理画面の使い方・Q＆A</p>
+
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">はじめてお使いの方へ</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">メール設定について</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">よくある質問Q&A</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">エディターの使い方</div>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="card mt-5">
+        <div class="card-body">
+          <div class="row d-flex justify-content-center">
+            <p class="w-100 bg-info text-light p-2 mr-3 ml-3">新着情報</p>
+
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">新規登録</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">一覧・編集</div>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mt-5">
+        <div class="card-body">
+          <div class="row d-flex justify-content-center">
+            <p class="w-100 bg-info text-light p-2 ml-3 mr-3">セラピスト</p>
+
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">新規登録</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">一覧・編集</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">非転載中</div>
+            </button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-12 col-md-3">
+      <div class="card">
+        <div class="card-body">
+          <div class="row d-flex justify-content-center">
+            <p class="w-100 bg-info text-light p-2 ml-3 mr-3">スケジュール</p>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">一覧・編集</div>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mt-5">
+        <div class="card-body">
+          <div class="row d-flex justify-content-center">
+            <p class="w-100 bg-info text-light p-2 ml-3 mr-3">インフォメーション</p>
+
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">新規登録</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">一覧・編集</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">非転載中</div>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mt-5">
+        <div class="card-body">
+          <div class="row d-flex justify-content-center">
+            <p class="w-100 bg-info text-light p-2 ml-3 mr-3">ランキング</p>
+
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">新規登録</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">一覧・編集</div>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-3">
+      <div class="card">
+        <div class="card-body">
+          <div class="row d-flex justify-content-center">
+            <p class="w-100 bg-info text-light p-2 ml-3 mr-3">リンク</p>
+
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">新規登録</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">一覧・編集</div>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mt-5">
+        <div class="card-body">
+          <div class="row d-flex justify-content-center">
+            <p class="w-100 bg-info text-light p-2 ml-3 mr-3">ウィジェット（HTMLタグ等）</p>
+
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">新規登録</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">一覧・編集</div>
+            </button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-12 col-md-3">
+      <div class="card">
+        <div class="card-body">
+          <div class="row d-flex justify-content-center">
+            <p class="w-100 bg-warning text-light p-2 ml-3 mr-3">初期設定</p>
+
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">店舗基本情報</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">LINE・Twitter・ブログ</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">利用ページ選択</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">トップページ表示順</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">スマホトップページ表示順</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">コンセプト</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">料金システム</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">クレジット決済</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">セラピスト質問</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">アクセス（地図）</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">求人（募集要項）</div>
+            </button>
+            <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
+              <div class="text1">フリーページ編集</div>
+            </button>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+</div>
