--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -109,13 +109,13 @@
   </nav>
 </div>
 <div class="row">
-  <div class="col-4"></div>
-  <div class="col-4">
+  <div class="col-12 col-md-4"></div>
+  <div class="col-12 col-md-4">
 <h2 class="d-flex justify-content-center">
   下北沢ラウンジ
 </h2>
 </div>
-<div class="col-4 d-flex justify-content-end">
+<div class="col-12 col-md-4 d-flex justify-content-end">
   <div class="m-3">
     広告
   </div>
