--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="hamburger">
+  <div class="hamburger mt-2">
   <span></span>
   <span></span>
   <span></span>
@@ -108,21 +108,21 @@
   </ul>
   </nav>
 </div>
-<div class="row">
+<div class="row bg-primary">
   <div class="col-12 col-md-4"></div>
   <div class="col-12 col-md-4">
-<h2 class="d-flex justify-content-center">
+<h2 class="d-flex justify-content-center text-light mt-2">
   下北沢ラウンジ
 </h2>
 </div>
 <div class="col-12 col-md-4 d-flex justify-content-end">
-  <div class="m-3">
+  <div class="m-3 text-light">
     広告
   </div>
-  <div class="m-3">
+  <div class="m-3 text-light">
     店舗ページ確認
   </div>
-  <div class="m-3">
+  <div class="m-3 text-light">
     ログアウト
   </div>
   </div>
