--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@ body {
 .hamburger {
   width: 40px;
   height: 40px;
-  background: #000;
+  background: primary;
   padding: 10px;
   display: flex;
   justify-content: center;
