--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -7,7 +7,9 @@
             <p class="w-100 bg-success text-light p-2 mr-3 ml-3">管理画面の使い方・Q＆A</p>
 
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">はじめてお使いの方へ</div>
+              <div class="text1 link-light">
+                <%= link_to "初めてのお使いの方へ", "/hazimete" %>
+              </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
               <div class="text1">メール設定について</div>
