--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -12,7 +12,9 @@
               </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">メール設定について</div>
+              <div class="text1 link-light">
+                <%= link_to "メール設定について", "/mail" %>
+              </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
               <div class="text1">よくある質問Q&A</div>
