--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -17,7 +17,9 @@
               </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">よくある質問Q&A</div>
+              <div class="text1 link-light">
+                <%= link_to "よくある質問Q&A", "/faq" %>
+              </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
               <div class="text1">エディターの使い方</div>
