--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,8 +8,11 @@
   <ul id="accordion_menu">
     <li>機能一覧</li>
     <li>
-      <a data-toggle="collapse" href="/" aria-controls="#menu01" aria-expanded="false">トップページ（メニュー）</a>
+      <a data-toggle="collapse" href="#menu01" aria-controls="#menu01" aria-expanded="false">トップページ（メニュー）</a>
     </li>
+    <ul id="menu01" class="collapse" data-parent="#accordion_menu">
+      <li><a href="/">・トップページ</a></li>
+    </ul>
     <li>
       <a data-toggle="collapse" href="#menu02" aria-controls="#menu02" aria-expanded="false">新着情報</a>
     </li>
