--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -22,7 +22,9 @@
               </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">エディターの使い方</div>
+              <div class="text1 link-light">
+                <%= link_to "エディターの使い方", "/editer" %>
+              </div>
             </button>
           </div>
         </div>
@@ -33,10 +35,14 @@
             <p class="w-100 bg-info text-light p-2 mr-3 ml-3">新着情報</p>
 
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">新規登録</div>
+              <div class="text1 link-light">
+                <%= link_to "新規登録", "/news/new" %>
+              </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">一覧・編集</div>
+              <div class="text1 link-light">
+                <%= link_to "一覧・編集", "/news" %>
+              </div>
             </button>
           </div>
         </div>
