--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,15 +17,15 @@
       <a data-toggle="collapse" href="#menu02" aria-controls="#menu02" aria-expanded="false">新着情報</a>
     </li>
     <ul id="menu02" class="collapse" data-parent="#accordion_menu">
-      <li><a href="#">・新規登録</a></li>
-      <li><a href="#">・一覧・修正</a></li>
+      <li><a href="/news/new">・新規登録</a></li>
+      <li><a href="/news">・一覧・修正</a></li>
     </ul>
     <li>
       <a data-toggle="collapse" href="#menu03" aria-controls="#menu03" aria-expanded="false">セラピスト</a>
     </li>
     <ul id="menu03" class="collapse" data-parent="#accordion_menu">
-      <li><a href="#">・新規登録</a></li>
-      <li><a href="#">・一覧・修正</a></li>
+      <li><a href="/therapists/new">・新規登録</a></li>
+      <li><a href="/therapists">・一覧・修正</a></li>
       <li><a href="#">・非転載中</a></li>
     </ul>
     <li>
