--- a/app/views/therapists/show.html.erb
+++ b/app/views/therapists/show.html.erb
@@ -137,4 +137,5 @@
 
 <%= link_to 'Edit', edit_therapist_path(@therapist) %> |
 <%= link_to 'Back', therapists_path %>
+<%= link_to "deleate", news_path(@therapist), method: :delete %>
 </div>
