--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,8 +51,8 @@
       <a data-toggle="collapse" href="#menu07" aria-controls="#menu07" aria-expanded="false">インフォメーション</a>
     </li>
     <ul id="menu07" class="collapse" data-parent="#accordion_menu">
-      <li><a href="#">・新規登録</a></li>
-      <li><a href="#">・一覧・修正</a></li>
+      <li><a href="/infos/new">・新規登録</a></li>
+      <li><a href="/infos">・一覧・修正</a></li>
       <li><a href="#">・非転載中</a></li>
     </ul>
     <li>
