--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -30,5 +30,5 @@
 </p>
 
 <%= link_to 'Edit', edit_link_path(@link) %> |
-<%= link_to 'Back', links_path %> 
-<%= link_to "deleate", news_path(@link), method: :delete %>
+<%= link_to 'Back', links_path %> |
+<%= link_to "deleate", link_path(@link), method: :delete %>
