--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -53,6 +53,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "投稿する", class: "btn btn-info col-sm-1" %>
   </div>
 <% end %>
