--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -131,10 +131,14 @@
             <p class="w-100 bg-info text-light p-2 ml-3 mr-3">リンク</p>
 
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">新規登録</div>
+              <div class="text1 link-light">
+                <%= link_to "新規登録", "/links/new" %>
+              </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">一覧・編集</div>
+              <div class="text1 link-light">
+                <%= link_to "一覧・編集", "/links" %>
+              </div>
             </button>
           </div>
         </div>
@@ -146,10 +150,14 @@
             <p class="w-100 bg-info text-light p-2 ml-3 mr-3">ウィジェット（HTMLタグ等）</p>
 
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">新規登録</div>
+              <div class="text1 link-light">
+                <%= link_to "新規登録", "/widgets/new" %>
+              </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">一覧・編集</div>
+              <div class="text1 link-light">
+                <%= link_to "一覧・編集", "/widgets" %>
+              </div>
             </button>
           </div>
         </div>
@@ -163,7 +171,9 @@
             <p class="w-100 bg-warning text-light p-2 ml-3 mr-3">初期設定</p>
 
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">店舗基本情報</div>
+              <div class="text1 link-light">
+                <%= link_to "店舗基本情報", "/settings/1/edit" %>
+              </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
               <div class="text1">LINE・Twitter・ブログ</div>
