--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -176,7 +176,9 @@
               </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">LINE・Twitter・ブログ</div>
+              <div class="text1 link-light">
+                <%= link_to "LINE・Twitter・ブログ", "/sns/1/edit" %>
+              </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
               <div class="text1">利用ページ選択</div>
