--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -181,7 +181,9 @@
               </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">利用ページ選択</div>
+              <div class="text1 link-light">
+                <%= link_to "利用ページ選択", "/pages/1/edit" %>
+              </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
               <div class="text1">トップページ表示順</div>
