--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -192,7 +192,9 @@
               <div class="text1">スマホトップページ表示順</div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
-              <div class="text1">コンセプト</div>
+              <div class="text1 link-light">
+                <%= link_to "コンセプト", "/concepts/1/edit" %>
+              </div>
             </button>
             <button type="button" class="w-75 btn btn-secondary btn-lg m-1 p-2">
               <div class="text1">料金システム</div>
